# muStore

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  IOVecSerializer.cpp  KVstore.cpp  Logger.cpp  Protocol.cpp  Server.cpp  TimingSerializer.cpp  TwoCopySerializer.cpp  Value.cpp  main.cpp  muSer.cpp
src/ext-serializers/: FlatBuffers.cpp  Protobuf.cpp
src/include/: FlatBuffers.hpp  IOVecSerializer.hpp  ISerializer.hpp  KVStore.hpp  Logger.hpp  Person.hpp  Protobuf.hpp  Protocol.hpp  SendMethod.hpp  Server.hpp  TimingSerializer.hpp  TwoCopySerializer.hpp  Value.hpp  final.pb.cc  final.pb.h  final_generated.h  muSer.hpp
src/papi/src/: Makefile  config.status  libpapi.so.7.2.0.0b1  papi.pc
src/papi/src/components/: Makefile_comp_tests.target
src/papi/src/ctests/: Makefile.target  attach_target  burn
src/papi/src/ftests/: Makefile.target
src/papi/src/libpfm4/lib/: pfmlib_amd64.lo  pfmlib_amd64_fam10h.lo  pfmlib_amd64_fam11h.lo  pfmlib_amd64_fam12h.lo  pfmlib_amd64_fam14h.lo  pfmlib_amd64_fam15h.lo  pfmlib_amd64_fam16h.lo  pfmlib_amd64_fam17h.lo  pfmlib_amd64_fam19h.lo  pfmlib_amd64_fam19h_l3.lo  pfmlib_amd64_fam1ah.lo  pfmlib_amd64_fam1ah_l3.lo  pfmlib_amd64_k7.lo  pfmlib_amd64_k8.lo  pfmlib_amd64_perf_event.lo  pfmlib_amd64_rapl.lo  pfmlib_common.lo  pfmlib_intel_adl.lo  pfmlib_intel_atom.lo  pfmlib_intel_bdw.lo  pfmlib_intel_bdx_unc_cbo.lo  pfmlib_intel_bdx_unc_ha.lo  pfmlib_intel_bdx_unc_imc.lo  pfmlib_intel_bdx_unc_irp.lo  pfmlib_intel_bdx_unc_pcu.lo  pfmlib_intel_bdx_unc_qpi.lo  pfmlib_intel_bdx_unc_r2pcie.lo  pfmlib_intel_bdx_unc_r3qpi.lo  pfmlib_intel_bdx_unc_sbo.lo  pfmlib_intel_bdx_unc_ubo.lo  pfmlib_intel_core.lo  pfmlib_intel_glm.lo  pfmlib_intel_gnr.lo  pfmlib_intel_hsw.lo  pfmlib_intel_hswep_unc_cbo.lo  pfmlib_intel_hswep_unc_ha.lo  pfmlib_intel_hswep_unc_imc.lo  pfmlib_intel_hswep_unc_irp.lo  pfmlib_intel_hswep_unc_pcu.lo  pfmlib_intel_hswep_unc_qpi.lo  (+72 more)
src/papi/src/sde_lib/: libsde.so.1.0
src/papi/src/testlib/: Makefile.target
src/papi/src/utils/: Makefile.target  papi_version
src/papi/src/validation_tests/: Makefile.target
src/uSer/: README.md
src/uSer/benchmark/: Makefile  cpu_util.sh  epoll_client.hpp  epoll_instance.hpp  epoll_mgr.hpp  epoll_server.hpp  epoll_test.cpp  epoll_test.out  fb_compile.sh  global_timer.hpp  helper_no2.hpp  latency_tool.hpp  proto_compile.sh  resfile  run.sh  th_benchmark.hpp  th_benchmark_concurrent_client.cpp  th_benchmark_concurrent_client.out  th_benchmark_server.cpp  th_benchmark_server.out  tmp
src/uSer/benchmark/proto/: synthetic.fbs  synthetic.proto
src/uSer/src/: Makefile  README.md  allocator.hpp  compile_time_gen.hpp  define.hpp  deserialise_message_meta.hpp  deserialiser.hpp  helper.hpp  latency_tool.hpp  make_symtab.cpp  message.hpp  sym  symtab.hpp  test_ms.cpp  types.hpp  user.hpp  wireformat.md  x.py
src/uSer/src/net/: common.hpp  net.hpp
src/uSer/src/parser/: README.md  employee.proto  parser.hpp  person.proto
src/uSer/test/: Makefile  helper_no.hpp  latency_toolno.hpp  p1.cpp  p1.out  p2.cpp  p2.out  sym_test.cpp  sym_test.out  test.cpp  test.out  test_parser.cpp  test_parser.out
src/uSer/test/proto/: final.fbs  final.proto  s1.proto  s2.proto
src/uSer/test/xperiment/: Person.hpp  Recommendation.cpp  Recommendation.out  Search.cpp  Search.out  experiment.h  geo.cpp  geo.csv  geo.out  geo_agg.csv  geo_all.csv  profile.cpp  profile.out  profile_agg.csv  profile_all.csv  rate.cpp  rate.out  rate_agg.csv  rate_all.csv  recommendation_agg.csv  recommendation_all.csv  user.cpp  user.out  ycsb.cpp  ycsb.out  ycsb_agg.csv  ycsb_all.csv
