cmake_minimum_required(VERSION 3.12)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
project(mustore VERSION 1.0)
add_compile_definitions(DEBUGMODE)
add_compile_definitions(PROTO_FILE="${CMAKE_CURRENT_SOURCE_DIR}/src/uSer/test/proto/final.proto")
add_compile_definitions(FBS_FILE="${CMAKE_CURRENT_SOURCE_DIR}/src/uSer/test/proto/final.fbs")
add_subdirectory(./src/)